Revision history for {{$dist->name}}

{{$NEXT}}
  - Add support for variadic functions (gh#136, gh#141)

0.90      2019-07-01 09:47:31 -0400
  - Documentation improvements (gh#137, et. al.)

0.89_01   2019-06-24 08:33:05 -0400
  - Fixed bug where prototypes to attach were sometimes being
    ignored.
  - Add sub_ref method to FFI::Platypus::Function (gh#133)
  - Better file/line number diagnostics for croak inside a
    wrapper (gh#129, gh#132)

0.88      2019-06-19 06:56:57 -0400
  - Add mangler attribute for FFI::Platypus (gh#128)

0.87      2019-04-23 08:25:35 -0400
  - Add probe for intptr_t and uintptr_t types (gh#123)
  - You may now use the ALIEN_INSTALL_TYPE environment
    to force using Alien::FFI (gh#121)
  - Documentation improvements (gh#122 manwar++ gh#120 ppisar++)

0.86      2019-03-02 16:42:12 -0500
  - Production release identical to 0.85_01

0.85_01   2019-03-01 20:38:22 -0500
  - Fix configure bug that misconfigured Perls with 32bit IVs
    resulting in truncated 64bit values. (gh#117, gh#118).
    This was a regression, probably introduced around 0.72
    or so.  The test t/gh117.t has been added to avoid a
    recurrence of this regression.

0.84      2019-02-15 15:26:23 -0500
  - FFI::Build sets @rpath on libraries that it builds
    on OS X.

0.83      2019-02-12 14:05:04 -0500
  - Fix warning in FFI::Build when verbose off
  - Allow arry file spec for FFI::Buuild source method
  - Added scalar_to_pointer to FFI::Platypus::Buffer

0.82      2019-02-10 10:34:57 -0500
  - Production release identical to 0.81_04

0.81_04   2019-02-08 14:49:20 -0500
  - Diagnostic release

0.81_02   2019-02-05 12:19:50 -0500
  - Diagnostic release

0.81_01   2019-02-04 11:51:52 -0500
  - Diagnostic release

0.80      2019-02-01 15:36:50 -0500
  - Fix incompatability with parallel bsd make

0.79      2019-01-31 20:58:07 -0500
  - Fix probe runner builder bug (gh#112, gh#113)

0.78      2019-01-30 10:28:22 -0500
  - Production release identical to 0.77_03
