@@ -2,6 +2,15 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Add support for variadic functions (gh#136, gh#141)
+  - Include Type Parser version 1.  This can be activated using
+    the api => 1 when creating a FFI::Platypus instance (gh#135)
+  - Usage of Type Parser version 1 is experimental and will
+    issue a warning until FFI::Platypus 1.00 is released (gh#135)
+  - Added support for pass-by-value records (gh#57,gh#92,gh#135)
+  - Allow decoration of aliases of basic types (gh#135, gh#135)
+  - Fix bug where Math::LongDouble and Math::Complex detection
+    wasn't being made for array and pointers of longdouble,
+    complex_float and complex_double types. (gh#135)
 
 0.90      2019-07-01 09:47:31 -0400
   - Documentation improvements (gh#137, et. al.)
